--- a/views/include/header.html
+++ b/views/include/header.html
@@ -18,10 +18,20 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/users/reg">注册</a></li>
-                <li><a href="/users/login">登录</a></li>
-                <li><a href="/articles/add">发表文章</a></li>
-                <li><a href="/users/logout">退出</a></li>
+                <%
+                if(user){
+                    %>
+                    <li><a href="/articles/add">发表文章</a></li>
+                    <li><a href="/users/logout">退出</a></li>
+                    <%
+                }else{
+                    %>
+                    <li class="active"><a href="/users/reg">注册</a></li>
+                    <li><a href="/users/login">登录</a></li>
+                    <%
+                }
+                %>
+
             </ul>
         </div>
     </div>
