--- a/views/include/header.html
+++ b/views/include/header.html
@@ -36,3 +36,15 @@
     </div>
 </nav>
 <div class="container">
+    <%
+    if(success){
+    %>
+    <div class="alert alert-success" role="alert"><%=success%></div>
+    <%
+    }
+    else if(success){
+    %>
+    <div class="alert alert-danger" role="alert"><%=error%></div>
+    <%
+    }
+    %>
