--- a/views/include/header.html
+++ b/views/include/header.html
@@ -42,7 +42,7 @@
     <div class="alert alert-success" role="alert"><%=success%></div>
     <%
     }
-    else if(success){
+    else if(error){
     %>
     <div class="alert alert-danger" role="alert"><%=error%></div>
     <%
