--- a/views/article/add.html
+++ b/views/article/add.html
@@ -1,2 +1,16 @@
 <%- include ../include/header.html %>
+
+<form method="post" action="/articles/add">
+    <div class="form-group">
+        <label for="title">标题</label>
+        <input type="text" class="form-control" id="title" name="title" placeholder="标题">
+    </div>
+    <div class="form-group">
+        <label for="content">内容</label>
+        <textarea name="content" id="content" cols="30" rows="10">
+        </textarea>
+    </div>
+    <button type="submit" class="btn btn-default">发表</button>
+</form>
+
 <%- include ../include/footer.html %>
