--- a/views/article/add.html
+++ b/views/article/add.html
@@ -7,7 +7,7 @@
     </div>
     <div class="form-group">
         <label for="content">内容</label>
-        <textarea name="content" id="content" cols="30" rows="10">
+        <textarea class="form-control" name="content" id="content" cols="30" rows="10">
         </textarea>
     </div>
     <button type="submit" class="btn btn-default">发表</button>
