--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,8 @@
         </div>
         <div class="media-body">
             <h4 class="media-heading"><%=article.title%></h4>
-            <p><%=article.content%></p>
+            <p><%-article.content%></p>
+            <img src="<%=article.img%>" height="100px" alt=""/>
         </div>
     </li>
     <%
