--- a/views/article/add.html
+++ b/views/article/add.html
@@ -7,8 +7,7 @@
     </div>
     <div class="form-group">
         <label for="content">内容</label>
-        <textarea class="form-control" name="content" id="content" cols="30" rows="10">
-        </textarea>
+        <textarea class="form-control" name="content" id="content" cols="30" rows="10"></textarea>
     </div>
     <div class="form-group">
         <label for="img">图片</label>
