--- a/views/index.html
+++ b/views/index.html
@@ -11,9 +11,10 @@
             <a href="#">
                 <img class="media-object" src="<%=article.user.avatar%>" alt="<%=article.user.username%>">
             </a>
+            <p>用户:<%=user.username%></p>
         </div>
         <div class="media-body">
-            <h4 class="media-heading"><%=article.title%></h4>
+            <h4 class="media-heading"><a href="/articles/detail/<%=article._id%>"><%=article.title%></a></h4>
             <p><%-article.content%></p>
             <img src="<%=article.img%>" height="100px" alt=""/>
         </div>
