--- a/views/article/add.html
+++ b/views/article/add.html
@@ -1,16 +1,18 @@
 <%- include ../include/header.html %>
 
 <form method="post" action="/articles/add" enctype="multipart/form-data">
+    <input type="text" name="_id" value="<%=article._id%>"/>
     <div class="form-group">
         <label for="title">标题</label>
-        <input type="text" class="form-control" id="title" name="title" placeholder="标题">
+        <input type="text" class="form-control" id="title" name="title" value="<%=article.title%>" placeholder="标题">
     </div>
     <div class="form-group">
         <label for="content">内容</label>
-        <textarea class="form-control" name="content" id="content" cols="30" rows="10"></textarea>
+        <textarea class="form-control" name="content" id="content" cols="30" rows="10"><%=article.content%></textarea>
     </div>
     <div class="form-group">
         <label for="img">图片</label>
+        <img src="<%=article.img%>" alt=""/>
         <input class="form-control" type="file" id="img" name="img"/>
     </div>
     <button type="submit" class="btn btn-default">发表</button>
