--- a/views/article/add.html
+++ b/views/article/add.html
@@ -13,7 +13,7 @@
         <label for="img">图片</label>
         <input class="form-control" type="file" id="img" name="img"/>
     </div>
-    <button type="submit" class="btn btn-default">更新</button>
+    <button type="submit" class="btn btn-default">发表</button>
 </form>
 
 <%- include ../include/footer.html %>
