--- a/views/article/update.html
+++ b/views/article/update.html
@@ -15,7 +15,7 @@
         <img src="<%=article.img%>" alt=""/>
         <input class="form-control" type="file" id="img" name="img"/>
     </div>
-    <button type="submit" class="btn btn-default">发表</button>
+    <button type="submit" class="btn btn-default">更新</button>
 </form>
 
 <%- include ../include/footer.html %>
