--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
                     <a href="#">
                         <img class="media-object" src="<%=article.user.avatar%>" alt="<%=article.user.username%>">
                     </a>
-                    <p>用户:<%=user.username%></p>
+                    <p>用户:<%=article.user.username%></p>
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading"><a href="/articles/detail/<%=article._id%>"><%=article.title%></a></h4>
