--- a/views/include/header.html
+++ b/views/include/header.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/lib/css/bootstrap.css"/>
     <link rel="stylesheet" href="/lib/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/stylesheets/style.css"/>
+    <script src="/lib/js/jquery.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
