--- a/views/include/header.html
+++ b/views/include/header.html
@@ -23,7 +23,7 @@
             <ul class="nav navbar-nav col-md-5">
                 <li><a href="/">博客</a></li>
                 <li><a href="/">话题</a></li>
-                <li><a href="/">问答</a></li>
+                <li><a href="/questions">问答</a></li>
             </ul>
             <ul class="nav navbar-nav nav_right">
                 <%
