--- a/views/include/header.html
+++ b/views/include/header.html
@@ -22,14 +22,14 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav col-md-5">
                 <li><a href="/">博客</a></li>
-                <li><a href="/">话题</a></li>
                 <li><a href="/questions">问答</a></li>
+                <li><a href="/">话题</a></li>
             </ul>
             <ul class="nav navbar-nav nav_right">
                 <%
                 if(user){
                 %>
-                    <li><a href="/articles/add">发表文章</a></li>
+                    <li><a href="/">消息</a></li>
                     <li><a href="/users/center">个人中心</a></li>
                     <li><a href="/users/logout">退出</a></li>
                     <%
