--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,42 @@
+/*global*/
+footer{
+  text-align: center;
+  padding:30px 0;
+  border-top: 1px solid #e2e2e2;
+  margin-top: 30px;
+}
+.color_GREY{
+  color: #8c8c8c;
+}
+.bgcolor_yellow{
+  background: #fcf8e3;;
+}
+.border_GREY{
+  border: 1px solid #f6f6f6;
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,.05);
+}
+.answer-info{
+  margin: 0;
+  padding:20px 0 0 0;
+}
+/*wighet*/
+.vote-btn{
+  width: 40px;
+  height: 54px;
+  text-align: center;
+  background: #f3f3f3;
+  color: #666;
+  border-radius: 2px;
+  box-shadow: 0 1px 1px rgba(0,0,0,.3);
+  border: 1px solid transparent;
+  font-size: 18px;
+}
+.vote-btn span{
+  display: block;
+  margin: 0;
+  padding: 0;
 
+}
 /*header css*/
 .nav_right{
    float: right;
@@ -12,14 +50,15 @@
   padding: 5px 5px 5px 0;
 }
 
-/*center css*/
+/*----------------------center css------------------------*/
 .header_center{
   padding: 40px 0;
 }
 .avatar_center{
   background: #ffffff;
   border-radius: 50%;
-  width: 100%;
+  height: 120px;
+  width: 120px;
 }
 .profile_item{
   display: block;
@@ -28,6 +67,10 @@
   margin-top: 10px;
   vertical-align: middle;
 }
+.profile_name{
+  margin: 0;
+  padding:0;
+}
 .profile_item .fa{
   color: #cccccc;
   vertical-align: middle;
@@ -35,6 +78,21 @@
   width: 20px;
   font-size: 16px;
   text-align: center;
+}
+.intro-plant{
+  background: #f5f5f5;
+  height: 120px;
+  border-radius: 3px;
+}
+.intro-plant .intro-title{
+  width: 100%;
+  background: #e3e3e3;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  padding: 5px 15px;
+}
+.intro-plant .intro-con{
+  padding: 15px;
 }
 
 /*question.css*/
@@ -83,9 +141,83 @@
 .qa-summary ul li{
   list-style: none;
   display: inline-block;
-  background: #e2e2e2;
+  background: #fcf8e3;
   font-size: 10px;
   padding: 1px 3px;
   text-align: center;
   margin-left: 5px;
+  color: #8a6d3b;
+}
+.qa-ask-plant{
+  text-align: center;
+  padding: 15px 10px;
+  color: #8a6d3b;
+  border-radius: 5px;
+}
+.qa-answer-border{
+  border: 1px solid #fbeed5;
+}
+/*qa detail*/
+.qa-panel{
+  background: #f6f6f6;
+  padding: 15px 0;
+  margin-bottom: 30px;
+}
+.qa-panel .qa-ask-span{
+  float: left;
+  border: 1px solid #009a61;
+  border-radius: 50%;
+  padding: 4px;
+  display: block;
+  width: 28px;
+  height: 28px;
+  text-align: center;
+  color: #009a61;
+  line-height: 1;
+  margin-left: 10px;
+  font-weight: 400;
+  font-size: 16px;
+}
+.qa-panel .qa-ask-title{
+  display: block;
+  margin-left: 10px;
+  float: left;
+}
+.qa-panel .qa-ask-title p{
+  margin: 0;
+}
+.qa-panel .qa-ask-title h3{
+  padding: 0;
+  margin: 0 0 10px 0;
+}
+.qa-panel .qa-ask-btn{
+  float: right;
+}
+.qa-panel .qa-ask-btn button{
+  display: block;
+  margin: 5px 40px 5px 5px;
+  width: 50px;
+}
+.qa-answer-title{
+  border-bottom: 2px solid #ccc;
+  padding: 5px 0;
+  margin: 25px 0;
+}
+.qa-answer-con article{
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+.qa-answer-con .post-col{
+  position: absolute;
+}
+.qa-answer-con .qa-answer-word{
+  float: left;
+  margin-left: 60px;
+}
+.answer-form{
+  padding:0 0 0 60px;
+}
+.answer-form button{
+  float: right;
 }
