--- a/views/article/detail.html
+++ b/views/article/detail.html
@@ -1,55 +1,68 @@
 <%- include ../include/header.html %>
-
-<div class="panel panel-default">
-    <div class="panel-heading"><%=article.title%></div>
-    <div class="panel-body">
-        <p><%-article.content%></p>
-    </div>
-    <div class="panel-footer">
-        <a class="btn btn-warning" href="/articles/update/<%=article._id%>">修改</a>
-        <a class="btn btn-danger" href="/articles/delete/<%=article._id%>">删除</a>
-    </div>
-</div>
-
-
-<div class="panel panel-default">
-    <div class="panel-heading">
-        评论列表
-    </div>
-    <div class="panel-body"  style="height:300px;overflow-y: scroll">
-        <ul class="media-list">
-            <%for(var i=0;i<article.comments.length;i++){
-            var comment=article.comments[i];
-            %>
-            <li class="media">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object" src="<%=comment.user.avatar%>" alt="<%=comment.user.username%>">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <p class="media-left"><%=comment.content%></p>
-                </div>
-                <div class="media-bottom">
-                    <%=comment.creatAt.toLocaleString()%>
-                </div>
-            </li>
-            <%
-            }%>
-
-        </ul>
-    </div>
-</div>
-
-<div class="panel panel-default">
-    <form action="/articles/comment" method="post">
-        <input type="hidden" value="<%=article._id%>" name="_id"/>
-        <div class="panel-body">
-            <textarea class="form-control" id="" cols="30" rows="10" id="content" name="content" placeholder="请输入评论" ></textarea>
+<div class="row">
+    <div class="col-md-12">
+        <div class="qa-panel clearfix">
+            <span class="qa-ask-span">文</span>
+            <div class="qa-ask-title">
+                <h3><%=article.title%></h3>
+                <p><a href="/"><%=article.user.username%></a><span style="padding: 0 10px">发布于</span>
+                    <span class="color_GREY"><%=article.timeGet%></span>
+                </p>
+            </div>
+            <div class="qa-ask-btn">
+                <button type="button" data-type="<%=article._id%>" id="collection_btn" class="btn btn-xs btn-primary">收藏</button>
+                <button type="button" data-type="<%=article._id%>" id="update_btn" class="btn btn-xs btn-danger">编辑</button>
+            </div>
         </div>
-        <div class="panel-footer">
-            <button type="submit" class="btn btn-default">提交</button>
-        </div>
-    </form>
+    </div>
 </div>
+<div class="row">
+    <div class="col-md-9">
+        <div class="qa-contain">
+            <%-article.content%>
+        </div>
+        <div class="qa-answer-part">
+            <div class="qa-answer-title">
+                <h4>评论</h4>
+            </div>
+            <div class="qa-answer-con">
+                <%for(var i =0;i<article.comments.length;i++){
+                var comment = article.comments[i];
+                %>
+                <article class="clearfix">
+                    <div class="qa-answer-word" style="margin-left: 0;">
+                        <div>
+                            <%-comment.content%>
+                        </div>
+
+                        <p class="answer-info">
+                            <a href="/"><%=comment.user.username%></a><span style="padding: 0 10px">评论于</span>
+                            <span class="color_GREY"><%=comment.timeGet%></span>
+                        </p>
+                    </div>
+                </article>
+                <%}%>
+
+            </div>
+            <div class="answer-form" style="padding: 0;">
+                <h4>评论</h4>
+                <form action="/articles/comment" method="post" class="clearfix">
+                    <input type="hidden" name="_id" value="<%=article._id%>">
+                    <div class="form-group">
+                        <textarea class="form-control" name="content" id="content" placeholder="请在此撰写评论..." cols="30" rows="10"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-success">提交评论</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="qa-ask-plant border_GREY">
+            <p><img style="border-radius: 50%" src="<%=article.user.avatar%>" alt="<%=article.user.username%>"></p>
+            <p>作者:<a href="/"><%=article.user.username%></a></p>
+            <p>“ 这家伙很懒，什么个性签名都没有留下。 ”</p>
+        </div>
+    </div>
+</div>
+
 <%- include ../include/footer.html %>
