--- a/views/question/qadetail.html
+++ b/views/question/qadetail.html
@@ -6,7 +6,7 @@
             <span class="qa-ask-span">问</span>
             <div class="qa-ask-title">
                 <h3><%=qa.title%></h3>
-                <p><a href="/"><%=qa.user.username%></a><span style="padding: 0 10px">提问于</span>
+                <p><a href="/users/userCenter/<%=qa.user._id%>"><%=qa.user.username%></a><span style="padding: 0 10px">提问于</span>
                     <span class="color_GREY"><%=qa.timeGet%></span>
                 </p>
             </div>
