--- a/views/question/qaindex.html
+++ b/views/question/qaindex.html
@@ -12,7 +12,7 @@
                 <div class="qa-view"><span>10</span><small>浏览</small></div>
             </div>
             <div class="qa-summary">
-                <p><a href="/"><%=question.user.username%></a>
+                <p><a href="/users/userCenter/<%=question.user._id%>"><%=question.user.username%></a>
                     <span style="padding: 0 10px">提问于</span>
                     <span class="color_GREY"><%=question.timePrint%></span>
                 </p>
