--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
             %>
             <li class="media article_box_under">
                 <div class="media-left">
-                    <a href="#">
+                    <a href="/users/userCenter/<%=article.user._id%>">
                         <img class="media-object" src="<%=article.user.avatar%>" alt="<%=article.user.username%>">
                     </a>
                     <p class="name_padding"><a href="/users/userCenter/<%=article.user._id%>"><%=article.user.username%></a></p>
