--- a/views/user/center.html
+++ b/views/user/center.html
@@ -28,7 +28,7 @@
         </div>
 </div>
 <input type="hidden" data-type="<%=user._id%>" id="userId">
-<div class="row">
+<div class="row" style="margin-top: 20px">
     <div class="col-md-2">
         <ul class="nav nav-pills nav-stacked" id="center_nav_tips">
             <li data-type="article" role="presentation" class="active"><a href="javascript:;">我的文章</a></li>
