--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,7 @@ footer{
 /*----------------------center css------------------------*/
 .header_center{
   padding: 40px 0;
+  background: #f8f8f8;
 }
 .avatar_center{
   background: #ffffff;
@@ -83,6 +84,7 @@ footer{
   background: #f5f5f5;
   height: 120px;
   border-radius: 3px;
+  margin-right: 20px;
 }
 .intro-plant .intro-title{
   width: 100%;
@@ -220,4 +222,110 @@ footer{
 }
 .answer-form button{
   float: right;
+}
+/*---------------topic css-------------------*/
+#demo img,a{border: 0}
+#demo li{list-style-type: none}
+#demo li:nth-of-type(1) img { transform: translate(-210px); }
+#demo li:nth-of-type(2) img { transform: translate(-180px); }
+#demo li:nth-of-type(3) img { transform: translate(-380px); }
+#demo li:nth-of-type(4) img { transform: translate(-450px); }
+#demo li:nth-of-type(5) img { transform: translate(-320px); }
+/*#demo { width: 1160px; height: 512px; margin: 60px auto 0 auto; padding-left: 0}*/
+#demo { width: 1160px; height: 260px; margin: 60px auto 0 auto; padding-left: 0}
+/*#demo img { width: 820px; height: 512px; max-width: 820px; }*/
+#demo img { width: 820px; height: 260px; max-width: 820px; }
+#demo li { float: left; position: relative; width: 82px; height: 100%; overflow: hidden; cursor: pointer; transition: 0.5s; transform-origin: bottom; filter: alpha(opacity=50); opacity: 0.5; }
+#demo li img { transition: 1.2s; }
+#demo li a { display: block; }
+#demo li div { position: absolute; bottom: 0; left: 0; width: 100%; background: #000; line-height: 32px; filter: alpha(opacity=70); opacity: 0.7; text-indent: 2em; }
+#demo li div a { color: #FFF; text-decoration: none; }
+#demo li div a:hover { color: #F00; text-decoration: none; }
+#demo li.active { cursor: pointer; transform: scale(1.02, 1.08); z-index: 3; width: 820px; filter: alpha(opacity=100); opacity: 1; }
+#demo li.active img { transform: translate(0px); }
+#demo li:nth-of-type(1) { transform-origin: bottom left; }
+#demo li:nth-of-type(5) { transform-origin: bottom right; }
+.topic-con{
+  margin-top: 40px;
+}
+.main-title{
+  border-left: 3px solid #ea6f5a;
+  padding-left: 10px;
+  line-height: 1;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+.topic-con .topic-collection{
+  display: inline-block;
+  margin: 0 18px 18px 0;
+  background-color: #f7f7f7;
+  border: 1px solid #dcdcdc;
+  border-radius: 4px;
+  vertical-align: top;
+  overflow: hidden;
+  padding: 5px;
+}
+.topic-con .more-collection{
+  display: inline-block;
+  margin: 0 0 18px 0;
+  vertical-align: top;
+  padding: 5px;
+  color: #666666;
+}
+.topic-con .more-collection span{
+  margin-right: 5px;
+}
+/*topic notelist*/
+.note-list{
+  margin: 0;
+  padding: 0;
+}
+.note-list li{
+  position: relative;
+  width: 100%;
+  margin: 0 0 17px;
+  padding: 0 2px 17px 0;
+  border-bottom: 1px solid #f0f0f0;
+  word-wrap: break-word;
+  list-style-type: none;
+}
+.note-list .wrap-img{
+  position: absolute;
+  top: 50%;
+  margin-top: -68px;
+  right: 0;
+  width: 150px;
+  height: 120px;
+}
+.note-list .wrap-img img{
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  border: 1px solid #f0f0f0;
+}
+.note-list .has-img{
+  min-height: 140px;
+}
+.note-list .note-author{
+  margin-bottom: 4px;
+  font-size: 13px;
+}
+.note-list .has-img .note-con{
+  padding-right: 160px;
+}
+.note-list .note-con p{
+  font-size: 13px;
+  line-height: 24px;
+  margin-top: 5px;
+}
+.note-list .note-con .note-title{
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+.note-list .note-other{
+  color: #8c8c8c;
+}
+.note-list .note-other span{
+  padding: 0 3px;
 }
