--- a/views/include/header.html
+++ b/views/include/header.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/lib/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="/stylesheets/style.css"/>
     <script src="/lib/js/jquery.min.js"></script>
+    <!--<script src="/lib/js/jquery-1.8.2.min.js"></script>-->
+    <script src="/lib/js/jquery.indexSlidePattern.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -21,9 +23,9 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav col-md-5">
-                <li><a href="/">博客</a></li>
-                <li><a href="/questions">问答</a></li>
                 <li><a href="/">话题</a></li>
+                <li><a href="/blogs">博客</a></li>
+                <li><a href="/questions">问答</a></li>
             </ul>
             <ul class="nav navbar-nav nav_right">
                 <%
