--- a/views/user/center.html
+++ b/views/user/center.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="intro-con">
                         <%=user.introduce%>
-                        签名档(还没写api)
+                        签名档
                     </div>
                 </div>
 
@@ -34,7 +34,6 @@
             <li data-type="article" role="presentation" class="active"><a href="javascript:;">我的文章</a></li>
             <li data-type="ask" role="presentation"><a href="javascript:;">我的提问</a></li>
             <li data-type="answer" role="presentation"><a href="javascript:;">我的回答</a></li>
-            <li data-type="topic" role="presentation"><a href="javascript:;">我的话题</a></li>
             <li data-type="comment"  role="presentation"><a href="javascript:;">我的评论</a></li>
         </ul>
     </div>
