--- a/views/include/header.html
+++ b/views/include/header.html
@@ -52,6 +52,7 @@
                 <%
                 }
                 %>
+                <li><a href="/admin/login">后台管理入口</a></li>
             </ul>
         </div>
     </div>
