--- a/views/index.html
+++ b/views/index.html
@@ -35,14 +35,14 @@
             <p>分享出来吧(ง •̀_•́)ง</p>
             <a class="btn btn-primary btn-block" href="/articles/add">撰写</a>
         </div>
-        <ul class="list-group" style="margin-top: 20px">
-            <li class="list-group-item">博文分类<span class="badge"><%=articles.length%></span></li>
-            <li class="list-group-item"><a href="/"> Java Web开发</a></li>
-            <li class="list-group-item"><a href="/"> PHP开发</a></li>
-            <li class="list-group-item"><a href="/"> 前端开发</a></li>
-            <li class="list-group-item"><a href="/"> IOS开发</a></li>
-            <li class="list-group-item"><a href="/"> Android开发</a></li>
-        </ul>
+        <!--<ul class="list-group" style="margin-top: 20px">-->
+            <!--<li class="list-group-item">博文分类<span class="badge"><%=articles.length%></span></li>-->
+            <!--<li class="list-group-item"><a href="/"> Java Web开发</a></li>-->
+            <!--<li class="list-group-item"><a href="/"> PHP开发</a></li>-->
+            <!--<li class="list-group-item"><a href="/"> 前端开发</a></li>-->
+            <!--<li class="list-group-item"><a href="/"> IOS开发</a></li>-->
+            <!--<li class="list-group-item"><a href="/"> Android开发</a></li>-->
+        <!--</ul>-->
     </div>
 </div>
 
