--- a/views/topic/topicIndex.html
+++ b/views/topic/topicIndex.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 <div class="row topic-con">
-    <div class="col-md-8">
+    <div class="col-md-12">
         <div class="main-title">热门话题</div>
         <div class="hot-topic">
             <a class="topic-collection" href="#">#node.js入门#</a>
@@ -41,28 +41,12 @@
                     <a href="#" class="wrap-img"><img src="images/1460085132177.jpeg" alt="1"></a>
                     <div class="note-con">
                         <div class="note-author">
-                            <a href="#">name</a>
-                            <span>1小时前</span>
+                            <a href="#">huyeqing</a>
+                            <span>2017年3月2日</span>
                         </div>
-                        <a class="note-title" href="#">用五到十年后的目光看待今天的自己</a>
+                        <a class="note-title" href="/articles/detail/58b7b6c10752452ab6bfbd81">ionic开发app 对于用户登录信息的存储用怎样的方案比较好</a>
                         <p>
-                            文/韩大爷的杂货铺 五到十年后，你想成为一个什么样的人？那时，你期待的职业状况与生活状态是怎样的？那时，你希望自己已经具备了哪方面或哪几种能力？把目光收回来，打量一下现在的自...
-                        </p>
-                        <div class="note-other">
-                            <i class="fa icon-comment"></i><span>3</span>
-                        </div>
-                    </div>
-                </li>
-                <li class="has-img">
-                    <a href="#" class="wrap-img"><img src="images/1460085132177.jpeg" alt="1"></a>
-                    <div class="note-con">
-                        <div class="note-author">
-                            <a href="#">name</a>
-                            <span>1小时前</span>
-                        </div>
-                        <a class="note-title" href="#">用五到十年后的目光看待今天的自己</a>
-                        <p>
-                            文/韩大爷的杂货铺 五到十年后，你想成为一个什么样的人？那时，你期待的职业状况与生活状态是怎样的？那时，你希望自己已经具备了哪方面或哪几种能力？把目光收回来，打量一下现在的自...
+                            文/huyeqing 因为在 app 中保持 session 很烦而且浪费，所以 app 通常使用 token based authentication （太长了，后面请允许我叫它 TBA :-）来做认证。...
                         </p>
                         <div class="note-other">
                             <i class="fa icon-comment"></i><span>3</span>
@@ -72,12 +56,12 @@
                 <li>
                     <div class="note-con">
                         <div class="note-author">
-                            <a href="#">name</a>
+                            <a href="#">huyeqing</a>
                             <span>1小时前</span>
                         </div>
-                        <a class="note-title" href="#">用五到十年后的目光看待今天的自己</a>
+                        <a class="note-title" href="/articles/detail/58b7b6c10752452ab6bfbd81">ionic开发app 对于用户登录信息的存储用怎样的方案比较好</a>
                         <p>
-                            文/韩大爷的杂货铺 五到十年后，你想成为一个什么样的人？那时，你期待的职业状况与生活状态是怎样的？那时，你希望自己已经具备了哪方面或哪几种能力？把目光收回来，打量一下现在的自...
+                            文/huyeqing 因为在 app 中保持 session 很烦而且浪费，所以 app 通常使用 token based authentication （太长了，后面请允许我叫它 TBA :-）来做认证。...
                         </p>
                         <div class="note-other">
                             <i class="fa icon-comment"></i><span>3</span>
@@ -87,7 +71,7 @@
             </ul>
         </div>
     </div>
-    <div class="col-md-4"></div>
+    <!--<div class="col-md-4"></div>-->
 </div>
 
 <%- include ../include/footer.html %>
